--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ body {
     text-align: center;
     justify-content: center;
     font-size: 20px;
+    max-width: 520px;
+    
 }
 #bodyforhome  {
     align-items: center;
@@ -60,7 +62,7 @@ font-family: "Open Sans", sans-serif;
  background-color: rgb(82, 63, 154);
       
 }
-.schedule, .note{ 
+.schedulebutton, .note{ 
    flex: 1 ;
     padding: 0px;
     margin: 0px;
@@ -77,7 +79,7 @@ cursor: pointer;
 .active{
     background-color: black;
     color: white;
-    border-radius: 5px;
+    border-radius: 50%;
 }
 
 .monthyear{
@@ -112,4 +114,175 @@ padding: 10px;
 .hidden {
     display: none;
     visibility: hidden;
+}
+@media(max-width: 300px){
+.days{
+    font-size: 13px;
+}
+}
+.schedulebutton{
+    background-color: rgb(39, 39, 39);
+    border-radius: 4px;
+}
+.schedulepage {
+
+    border-width: 3px;
+
+    margin-top: 25px;
+}
+.eventList {
+        background-color: rgb(69, 18, 119);
+}
+.addEvent {
+    background-color: rgb(140, 34, 202);
+    border-radius: 50%;
+       width: 30px;
+       height: 30px;
+        margin-top: 0px;
+        align-items:center;
+        justify-content: center;
+        justify-self: right;
+        font-size: 30px;
+        text-align: center;
+}
+.scheduleContainer{
+ position: relative;
+}
+.timeline{
+    position: absolute;
+    height: 100%;
+    left: 50px;
+    top: 0;
+    height: 100%;
+    width: 4px;
+    background-color: rgb(160, 78, 231);
+    border-radius: 2px;
+}
+.event{
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    margin-left: 50px;
+    margin-bottom: 40px;
+    margin-top: 0px;
+    font-size: 18px;
+    padding-left: 30px;
+}
+
+
+
+
+.circle {
+    position: absolute;
+    left: 4px;
+    transform: translateX(-50%);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color:  rgb(59, 34, 85);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+    border:5px solid rgb(160, 78, 231);
+}
+.addEventPage{
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(47, 16, 84);
+   display: flex;
+flex-direction: column;
+align-items: flex-start;
+justify-content: flex-start;
+    padding: 15px;
+    overflow-y: auto;
+    z-index: 100;
+    color: white;
+    max-width: 400px;
+margin: 0 auto;
+
+}
+.addEventHeader{
+    display: grid;
+    grid-template-columns: 15em 1em;
+    
+
+}
+.addEventHeader>.backbutton{
+    display: grid;
+    align-items: self-start;
+    justify-content: left;
+}
+.schedule{
+    margin-bottom: 0px;
+    padding:0px ;
+    border: 0px;
+    height: 30px;   
+}
+.eventDetails>div{
+    padding-top: 20px;
+}
+.eventExtras{
+    display: block;
+}
+#eventTitle{
+    background-color: #CCC2FE;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+    width: 100%;
+    height: 32px;
+    Top: 159px;
+    Left: 24px;
+    border-radius: 4px;
+    font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+
+}
+.eventCard{
+    display: flex;
+    flex-direction: column;
+    width:100%;
+    background-color: #311f43;
+    border-radius: 10px;
+    align-items: flex-start;
+    justify-content: left;
+    align-self: self-start;
+    margin-top: 0px;
+    padding-top: 0px;
+    
+}
+
+.eventCard>h4{
+    margin-bottom: 4px;
+    margin-top: 5px;
+    margin-left: 10px;
+    font-size: 12px;
+    font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+}
+.eventCard>p{
+    font-size: 12px;
+    margin: 0px;
+    margin-left: 10px;
+    font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  color: #FFFFFF;
+}
+.line{
+    width : 92%;
+    margin-top: 0px;
+    margin-bottom: 4px;
+   background-color: rgb(0, 15, 128);
 }
