--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: rgb(33, 7, 57);
     color: white;
@@ -203,7 +204,7 @@ justify-content: flex-start;
     overflow-y: auto;
     z-index: 100;
     color: white;
-    max-width: 400px;
+ 
 margin: 0 auto;
 
 }
@@ -224,18 +225,37 @@ margin: 0 auto;
     border: 0px;
     height: 30px;   
 }
-.eventDetails>div{
+/*.eventDetails>div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     padding-top: 20px;
+    margin-left: 0px;
+
 }
-.eventExtras{
-    display: block;
+.eventDetails>label{
+       display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 20px;
+    margin-left: 0px;
+
+}*/
+
+
+.eventExtras {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
 }
-#eventTitle{
+#eventTitle,#place, #notes {
     background-color: #CCC2FE;
     margin: 0px;
+    margin-bottom: 5px;
     padding: 0px;
     border: 0px;
-    width: 100%;
+    width: calc(100% - 20px);
     height: 32px;
     Top: 159px;
     Left: 24px;
@@ -244,8 +264,10 @@ margin: 0 auto;
   font-optical-sizing: auto;
   font-weight: 100;
   font-style: normal;
+    box-sizing: border-box; 
 
 }
+
 .eventCard{
     display: flex;
     flex-direction: column;
@@ -280,9 +302,28 @@ margin: 0 auto;
   font-style: normal;
   color: #FFFFFF;
 }
+
 .line{
     width : 92%;
     margin-top: 0px;
     margin-bottom: 4px;
    background-color: rgb(0, 15, 128);
+}
+    
+.addEventPage {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.addEventPage>h4, .addEventPage>label, .addEventPage>div{
+    padding:  10px;
+}
+#place, #notes {
+    margin-bottom: 17px;
+}
+
+#Fulldaytoggle {
+    border-radius: 50%;
 }
