--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,16 @@
 
+
 body {
     background-color: #1F1338;
     color: white;
     text-align: center;
     justify-content: center;
-    font-size: 20px;
-    max-width: 520px;
-    
+   
+
+ margin: 0px;
+ border: 0px;
+ padding: 0px;
+max-width: 500px;
 }
 #bodyforhome  {
     align-items: center;
@@ -58,7 +62,7 @@ font-family: "Open Sans", sans-serif;
     border-radius: 10px;
    width: auto;   
     padding: 0px;
-    height: auto;
+   
     margin-top: 20px;
  background-color: rgb(82, 63, 154);
       
@@ -89,6 +93,12 @@ cursor: pointer;
     gap: 10px;
     justify-content: center;
    
+}
+.monthList, .yearList {
+    background-color: rgb(71, 48, 135);
+    border-radius: 10px;
+    padding: 15px;
+    
 }
 .calender {
     border: 5px solid rgb(219, 218, 232);
@@ -206,17 +216,23 @@ padding: 10px;
     background-color: rgb(47, 16, 84);
    display: flex;
 flex-direction: column;
-align-items: flex-start;
-justify-content: flex-start;  
+
     overflow-y: auto;
     overflow-x: hidden;
     z-index: 100;
     color: white;
     
 }
+
+.eventPage {
+    max-width: 10000px;
+
+}
+
+
 .addEventHeader{
-    display: grid;
-    grid-template-columns: 15em 1em;
+    display: flex;
+    justify-content: space-between;
     
 
 }
@@ -378,13 +394,17 @@ justify-content: flex-start;
 }
 
 
-notesPage{
+.notesPage{
     position: fixed;
     left: 0;
     top: 0;
     width: 100vw;
     height: 100vh;
     background-color: #7E64FF;
+    cursor: text;
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
 }
 #notestextarea {
     margin: 0px;
@@ -433,7 +453,7 @@ notesPage{
     padding-right: 30px;
  
 }
-.fulldayClick{
+.blur{
       pointer-events: none;
      opacity: 0.15;
 }
@@ -460,4 +480,20 @@ notesPage{
 .repeatPopup>div, .reminderPopup>div {
     border-bottom: 2px solid black;
 
+}
+@media(min-width: 500px){
+  .days{
+    font-size: 24px;
+  }
+  .dates{
+    font-size: 30px;
+  }
+  body{
+    margin: auto;
+  }
+
+  .event, .eventCard>p, .eventCard>h4{
+    font-size: 20px;
+  }
+  
 }
